<resources>
    <string name="app_name">GuardianNews</string>
    <string name="toolbar_title">The Guardian</string>

    <string name="home">Home</string>
    <string name="world">World</string>
    <string name="environment">Environment</string>
    <string name="sport">Sport</string>
    <string name="science">Science</string>
    <string name="settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="sky_blue">Sky blue</string>
    <string name="dark_blue">Dark blue</string>
    <string name="green">Green</string>
    <string name="light_green">Light green</string>
    <string name="white">White</string>

    <string name="settings_title">Settings</string>

    <string name="customize_style">Customize style</string>
    <string name="number_of_items">Number of Items</string>
    <string name="order_by">Order By</string>
    <string name="from_date">From Date</string>
    <string name="color_theme">Color Theme</string>
    <string name="text_size">Text Size</string>

    <string name="ok_button">OK</string>

    <string name="item_count_hint">default: 10</string>


    <string name="order_by_newest">Newest</string>
    <string name="order_by_oldest">Oldest</string>
    <string name="order_by_relevance">Relevance</string>


    <string name="font_size_choice">Choose Font Size</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>

    <string name="press_back_to_exit">Press back again to exit</string>
</resources>