<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_world"
            android:checkable="true"
            android:icon="@drawable/ic_world_24dp"
            android:title="@string/world" />

        <item
            android:id="@+id/nav_environment"
            android:checkable="true"
            android:icon="@drawable/ic_forest_24dp"
            android:title="@string/environment" />

        <item
            android:id="@+id/nav_science"
            android:checkable="true"
            android:icon="@drawable/ic_science_24dp"
            android:title="@string/science" />

        <item
            android:id="@+id/nav_sport"
            android:checkable="true"
            android:icon="@drawable/ic_sport_24dp"
            android:title="@string/sport" />


    </group>
</menu>