<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_m">

    <RadioGroup
        android:id="@+id/order_by_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/newest_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_by_newest"/>

        <RadioButton
            android:id="@+id/oldest_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_by_oldest"/>

        <RadioButton
            android:id="@+id/relevance_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_by_relevance"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_by_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_dialog_ok_button"
        android:layout_margin="@dimen/margin_m"
        android:text="@string/ok_button" />


</androidx.appcompat.widget.LinearLayoutCompat>